2016-06-11  Dominique d'Humieres  <dominiq@lps.ens.fr>

PR fortran/60751
	* io.c (gfc_resolve_dt): Replace GFC_STD_GNU with GFC_STD_LEGACY.

	* gfortran.dg/comma_IO_extension_1.f90: New test.
	* gfortran.dg/comma_IO_extension_2.f90: Likewise.
	* gfortran.dg/array_constructor_49.f90: Remove extra comma in WRITE
	statement.
	* gfortran.dg/graphite/pr38083.f90: Likewise.
	* gfortran.dg/integer_exponentiation_6.F90: Likewise and add
	missing format.

--This line

M    fortran/ChangeLog
M    fortran/io.c
M    testsuite/ChangeLog
M    testsuite/gfortran.dg/array_constructor_49.f90
M    testsuite/gfortran.dg/graphite/pr38083.f90
M    testsuite/gfortran.dg/integer_exponentiation_6.F90


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@237329 138bc75d-0d04-0410-961f-82ee72b054a4